# OpenGL

./: .gitattributes  CMakeLists.txt  Dependency.cmake
External Libs/GLM/glm/: ext.hpp
External Libs/GLM/glm/detail/: setup.hpp  type_mat2x2.hpp  type_mat2x2.inl  type_mat2x3.hpp  type_mat2x3.inl  type_mat2x4.hpp  type_mat2x4.inl  type_mat3x2.hpp  type_mat3x2.inl  type_mat3x3.hpp  type_mat3x3.inl  type_mat3x4.hpp  type_mat3x4.inl  type_mat4x2.hpp  type_mat4x2.inl  type_mat4x3.hpp  type_mat4x3.inl  type_mat4x4.hpp  type_mat4x4.inl  type_quat.hpp  type_quat.inl  type_vec1.hpp  type_vec2.hpp  type_vec2.inl  type_vec3.hpp  type_vec3.inl  type_vec4.hpp  type_vec4.inl
External Libs/GLM/glm/ext/: matrix_transform.inl  scalar_ulp.inl
External Libs/GLM/glm/gtc/: integer.hpp  packing.inl
External Libs/GLM/glm/gtx/: color_space.inl  component_wise.hpp  dual_quaternion.hpp  euler_angles.hpp  euler_angles.inl  io.hpp  matrix_decompose.hpp  matrix_factorisation.hpp  matrix_interpolation.hpp  number_precision.hpp  pca.hpp  string_cast.inl
OpenGL/: OpenGL.sln  OpenGL.vcxproj  main.cpp
OpenGL/Debug/: OpenGL.exe.recipe  OpenGL.ilk  OpenGL.vcxproj.FileListAbsolute.txt  vc143.idb
OpenGL/Debug/OpenGL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  OpenGL.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
OpenGL/x64/Debug/: vc143.idb
OpenGL/x64/Debug/OpenGL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OpenGL.lastbuildstate
shader/: simple.fs  simple.vs
src/: common.cpp  common.h  main.cpp  shader.cpp  shader.h
